<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metropolia Lukkari</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="group_name">Ryhmätunnus</string>
    <string name="search">Hae</string>
    <string name="empty_string"></string>
    <string name="start_date">Aloitus pvm</string>
    <string name="choose">Valitse</string>
    <string name="clear">Clear</string>
    <string name="more_details">More details</string>
    <string name="code">Koodi</string>
    <string name="name">Nimi</string>
    <string name="student_groups">Ryhmät</string>
    <string name="end_date">Loppu pvm</string>
    <string name="subject">Aihe</string>
    <string name="resouce_type">Resurssityyppi</string>
    <string name="add">Add</string>
    <string name="dialog_add_related_reservations">Would you like to add all reservations related to the realization?</string>

</resources>